# template_plugin

./: Cargo.toml  LICENSE.md  README.md
src/: READ_BEFORE_CODING.md  algorithms.rs  lib.rs  parameter_manager.rs  process.rs
src/user_code/: mod.rs  parameters.rs  process_effects.rs
