[package]
name = "TEMPLATE_PLUGIN"
version = "0.1.0"
authors = ["Lorenzo Panieri <panierilorenzo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = "0.2.x"
dsp_lab = {git = "https://github.com/Flux-Audio/dsp_lab.git", branch="master"}

[lib]
name = "TEMPLATE_PLUGIN_v0_1_0_dev"
crate-type = ["cdylib"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "fat"
